@@ -1,6 +1,5 @@
 package com.yunche.loan.service.impl;
 
-
 import com.yunche.loan.config.exception.BizException;
 import com.yunche.loan.config.util.BeanPlasticityUtills;
 import com.yunche.loan.config.util.SessionUtils;
@@ -40,19 +39,19 @@ public class FinancialSchemeServiceImpl implements FinancialSchemeService {
     @Override
     public RecombinationVO detail(Long orderId) {
         FinancialSchemeVO financialSchemeVO = loanQueryDOMapper.selectFinancialScheme(orderId);
-        List<UniversalCustomerVO> customers =  loanQueryDOMapper.selectUniversalCustomer(orderId);
-        for(UniversalCustomerVO universalCustomerVO:customers){
+        List<UniversalCustomerVO> customers = loanQueryDOMapper.selectUniversalCustomer(orderId);
+        for (UniversalCustomerVO universalCustomerVO : customers) {
             List<UniversalCustomerFileVO> files = loanQueryDOMapper.selectUniversalCustomerFile(Long.valueOf(universalCustomerVO.getCustomer_id()));
             universalCustomerVO.setFiles(files);
         }
-        RecombinationVO<FinancialSchemeVO> recombinationVO = new RecombinationVO<FinancialSchemeVO>();
+        RecombinationVO<FinancialSchemeVO> recombinationVO = new RecombinationVO<>();
         recombinationVO.setInfo(financialSchemeVO);
         recombinationVO.setCustomers(customers);
         return recombinationVO;
     }
 
     @Override
-    public RecombinationVO verifyDetail(Long orderId,Long hisId) {
+    public RecombinationVO verifyDetail(Long orderId, Long hisId) {
 
         List<UniversalCustomerVO> customers = loanQueryDOMapper.selectUniversalCustomer(orderId);
         for (UniversalCustomerVO universalCustomerVO : customers) {
@@ -69,7 +68,7 @@ public class FinancialSchemeServiceImpl implements FinancialSchemeService {
 
 
     @Override
-    public RecombinationVO modifyDetail(Long orderId,Long hisId) {
+    public RecombinationVO modifyDetail(Long orderId, Long hisId) {
         RecombinationVO recombinationVO = new RecombinationVO();
         /*recombinationVO.setInfo(loanQueryDOMapper.selectUniversalInfo(orderId));
         recombinationVO.setDiff(loanQueryDOMapper.selectUniversalLoanFinancialPlanTempHis(hisId));*/
@@ -85,84 +84,78 @@ public class FinancialSchemeServiceImpl implements FinancialSchemeService {
     @Override
     public void modifyUpdate(FinancialSchemeModifyUpdateParam param) {
 
-
-
-
-        if(StringUtils.isBlank(param.getHis_id())){
+        if (StringUtils.isBlank(param.getHis_id())) {
             //单号为空,视为新增
-            LoanFinancialPlanTempHisDO his = BeanPlasticityUtills.copy(LoanFinancialPlanTempHisDO.class,param);
+            LoanFinancialPlanTempHisDO his = BeanPlasticityUtills.copy(LoanFinancialPlanTempHisDO.class, param);
             EmployeeDO employeeDO = SessionUtils.getLoginUser();
             his.setInitiator_id(employeeDO.getId());
             his.setInitiator_name(employeeDO.getName());
             loanFinancialPlanTempHisDOMapper.insertSelective(his);
 
-        }else{
+        } else {
             //单号为空,视为新增
-            LoanFinancialPlanTempHisDO his = BeanPlasticityUtills.copy(LoanFinancialPlanTempHisDO.class,param);
+            LoanFinancialPlanTempHisDO his = BeanPlasticityUtills.copy(LoanFinancialPlanTempHisDO.class, param);
             his.setId(Long.valueOf(param.getHis_id()));
             EmployeeDO employeeDO = SessionUtils.getLoginUser();
             his.setInitiator_id(employeeDO.getId());
             his.setInitiator_name(employeeDO.getName());
             loanFinancialPlanTempHisDOMapper.updateByPrimaryKeySelective(his);
         }
-
-
-
     }
 
     @Override
-    public void migration(Long orderId, Long hisId,String action) {
+    public void migration(Long orderId, Long hisId, String action) {
 
-                LoanOrderDO loanOrderDO = loanOrderDOMapper.selectByPrimaryKey(orderId,new Byte("0"));
-                if(loanOrderDO == null){
-                    throw new BizException("订单不存在");
-                }
-                Long loanFinancialPlanId = loanOrderDO.getLoanFinancialPlanId();
-                if(loanFinancialPlanId == null){
-                    throw new BizException("金融方案单不存在");
-                }
-                LoanFinancialPlanTempHisDO param = loanFinancialPlanTempHisDOMapper.selectByPrimaryKey(hisId);
-                if(param == null){
-                    throw new BizException("金融方案修改单不存在");
-                }
-                //先对金融方案修改单进行更新
-                LoanFinancialPlanTempHisDO updateV = new LoanFinancialPlanTempHisDO();
-                updateV.setId(hisId);
-                if(!StringUtils.isBlank(action)){
-                    updateV.setStatus(new Byte(action));
-                }
-                EmployeeDO employeeDO  = SessionUtils.getLoginUser();
-                updateV.setAuditor_id(employeeDO.getId());
-                updateV.setAuditor_name(employeeDO.getName());
-                updateV.setEnd_time(new Timestamp(new Date().getTime()));
-                loanFinancialPlanTempHisDOMapper.updateByPrimaryKeySelective(updateV);
-                LoanFinancialPlanDO loanFinancialPlanDO = new LoanFinancialPlanDO();
-                loanFinancialPlanDO.setId(loanFinancialPlanId);
-                loanFinancialPlanDO.setFinancialProductId(Long.valueOf(param.getFinancial_product_id()));
-                loanFinancialPlanDO.setAppraisal(param.getFinancial_appraisal());
-                loanFinancialPlanDO.setBank(param.getFinancial_bank());
-                loanFinancialPlanDO.setLoanTime(Integer.valueOf(param.getFinancial_loan_time()));
-                loanFinancialPlanDO.setDownPaymentRatio(param.getFinancial_down_payment_ratio());
-                loanFinancialPlanDO.setFinancialProductName(param.getFinancial_product_name());
-                loanFinancialPlanDO.setSignRate(param.getFinancial_sign_rate());
-                loanFinancialPlanDO.setLoanAmount(param.getFinancial_loan_amount());
-                loanFinancialPlanDO.setFirstMonthRepay(param.getFinancial_first_month_repay());
-                loanFinancialPlanDO.setCarPrice(param.getFinancial_car_price());
-                loanFinancialPlanDO.setDownPaymentMoney(param.getFinancial_down_payment_money());
-                loanFinancialPlanDO.setBankPeriodPrincipal(param.getFinancial_bank_period_principal());
-                loanFinancialPlanDO.setEachMonthRepay(param.getFinancial_each_month_repay());
-                loanFinancialPlanDO.setPrincipalInterestSum(param.getFinancial_total_repayment_amount());
-                loanFinancialPlanDOMapper.updateByPrimaryKeySelective(loanFinancialPlanDO);
+        LoanOrderDO loanOrderDO = loanOrderDOMapper.selectByPrimaryKey(orderId, new Byte("0"));
+        if (loanOrderDO == null) {
+            throw new BizException("订单不存在");
+        }
+        Long loanFinancialPlanId = loanOrderDO.getLoanFinancialPlanId();
+        if (loanFinancialPlanId == null) {
+            throw new BizException("金融方案单不存在");
+        }
+        LoanFinancialPlanTempHisDO param = loanFinancialPlanTempHisDOMapper.selectByPrimaryKey(hisId);
+        if (param == null) {
+            throw new BizException("金融方案修改单不存在");
+        }
+        //先对金融方案修改单进行更新
+        LoanFinancialPlanTempHisDO updateV = new LoanFinancialPlanTempHisDO();
+        updateV.setId(hisId);
+        if (!StringUtils.isBlank(action)) {
+            updateV.setStatus(new Byte(action));
+        }
+        EmployeeDO employeeDO = SessionUtils.getLoginUser();
+        updateV.setAuditor_id(employeeDO.getId());
+        updateV.setAuditor_name(employeeDO.getName());
+        updateV.setEnd_time(new Timestamp(new Date().getTime()));
+        loanFinancialPlanTempHisDOMapper.updateByPrimaryKeySelective(updateV);
+        LoanFinancialPlanDO loanFinancialPlanDO = new LoanFinancialPlanDO();
+        loanFinancialPlanDO.setId(loanFinancialPlanId);
+        loanFinancialPlanDO.setFinancialProductId(Long.valueOf(param.getFinancial_product_id()));
+        loanFinancialPlanDO.setAppraisal(param.getFinancial_appraisal());
+        loanFinancialPlanDO.setBank(param.getFinancial_bank());
+        loanFinancialPlanDO.setLoanTime(Integer.valueOf(param.getFinancial_loan_time()));
+        loanFinancialPlanDO.setDownPaymentRatio(param.getFinancial_down_payment_ratio());
+        loanFinancialPlanDO.setFinancialProductName(param.getFinancial_product_name());
+        loanFinancialPlanDO.setSignRate(param.getFinancial_sign_rate());
+        loanFinancialPlanDO.setLoanAmount(param.getFinancial_loan_amount());
+        loanFinancialPlanDO.setFirstMonthRepay(param.getFinancial_first_month_repay());
+        loanFinancialPlanDO.setCarPrice(param.getFinancial_car_price());
+        loanFinancialPlanDO.setDownPaymentMoney(param.getFinancial_down_payment_money());
+        loanFinancialPlanDO.setBankPeriodPrincipal(param.getFinancial_bank_period_principal());
+        loanFinancialPlanDO.setEachMonthRepay(param.getFinancial_each_month_repay());
+        loanFinancialPlanDO.setPrincipalInterestSum(param.getFinancial_total_repayment_amount());
+        loanFinancialPlanDOMapper.updateByPrimaryKeySelective(loanFinancialPlanDO);
     }
 
     @Override
     public List<UniversalCustomerOrderVO> queryModifyCustomerOrder(String name) {
-        return loanQueryDOMapper.selectUniversalModifyCustomerOrder(SessionUtils.getLoginUser().getId(),name);
+        return loanQueryDOMapper.selectUniversalModifyCustomerOrder(SessionUtils.getLoginUser().getId(), name);
     }
 
     @Override
     public List<UniversalCustomerOrderVO> queryRefundCustomerOrder(String name) {
-        return loanQueryDOMapper.selectUniversalRefundCustomerOrder(SessionUtils.getLoginUser().getId(),name);
+        return loanQueryDOMapper.selectUniversalRefundCustomerOrder(SessionUtils.getLoginUser().getId(), name);
     }
 
 }
